--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -17,6 +17,9 @@
     <div class="main" id="main">
         <h1 class="uppercase text-center" style="padding-top: 2rem;">functional assessment interview
             (fai)</h1>
+            <div class="log">
+            <a href="/logout"><button>Logout</button></a>
+        </div>
         <div class="form">
             <form action="page1.html">
                 <div class="flex item-center justify-between gap-20">
