--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>FAI</title>
     <style>
         
@@ -13,14 +14,14 @@
     </style>
 </head>
 
-<body>
+<body class=" bg-[#F0F0F0]">
     <div class="main" id="main">
         <h1 class="uppercase text-center" style="padding-top: 2rem;">functional assessment interview
             (fai)</h1>
             <div class="log">
             <a href="/logout"><button>Logout</button></a>
         </div>
-        <div class="form">
+        <div class="form  bg-white p-5 rounded-xl [box-shadow:0_4px_8px_rgba(0,_0,_0,_0.1)]">
             <form action="page1.html">
                 <div class="flex item-center justify-between gap-20">
                     <div class="flex item-center gap-4 wd-full">
@@ -768,6 +769,13 @@
                 </div>
 
             </form>
+
+            <div class=" flex items-center justify-center gap-5">
+                <a href="/Quation-2" class=" "><button>page 2</button></a>
+                <a href="/Quation-3" class=" "><button>page 3</button></a>
+                <a href="/Quation-4" class=" "><button>page 4</button></a>
+                <a href="/Quation-5" class=" "><button>page 5</button></a>
+            </div>
 </body>
 
 </html>
